予定一覧の日付をJSTに変更

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,5 @@
 extends layout
+extends schedule
 
 block content
   div(class="jumbotron")
@@ -18,4 +19,4 @@ block content
           tr
             td
               a(href="/schedules/#{schedule.scheduleId}") #{schedule.scheduleName}
-            td #{schedule.updatedAt}
+            td #{schedule.formattedUpdatedAt}
