JST 日本標準時に変換し、YYYY/MM/DD HH:mm 形式で表示

--- a/views/index.jade
+++ b/views/index.jade
@@ -18,4 +18,5 @@ block content
           tr
             td
               a(href="/schedules/#{schedule.scheduleId}") #{schedule.scheduleName}
-            td #{schedule.updatedAt}
+            //YYYY/MM/DD HH:mm 形式で表示
+            td #{schedule.formattedUpdatedAt}
