--- a/views/edit.jade
+++ b/views/edit.jade
@@ -19,5 +19,5 @@ block content
     div
       button(class="btn btn-info" type="submit") 以上の内容で予定を編集する
   h3 危険な変更
-  form(method="post", action="/schedules/#{schedule.scheduleId}?delete=1")
-    button(class="btn btn-danger" type="submit") この予定を削除する
+  form(name='alert' onsubmit="return false" method="post", action="/schedules/#{schedule.scheduleId}?delete=1")
+    button( class="btn btn-danger" type="submit" name='btn') この予定を削除する
