--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,3 +22,4 @@ html
     div(class="container")
       block content
     script(src="/javascripts/bundle.js")
+    script(src="/javascripts/alert.js")
