--- a/views/index.pug
+++ b/views/index.pug
@@ -7,7 +7,7 @@ block content
   if user
     div
       a(href="/schedules/new").btn.btn-info 予定を作る
-    - var hasSchedule = schedules.length > 0
+    - var hasSchedule = schedules.length > 0 
     if hasSchedule
       h3.my-3 あなたの作った予定一覧
       table.table
@@ -18,4 +18,4 @@ block content
           tr
             td
               a(href=`/schedules/${schedule.scheduleId}`) #{schedule.scheduleName}
-            td #{schedule.updatedAt}
+            td #{schedule.formattedUpdatedAt}
