--- a/views/index.pug
+++ b/views/index.pug
@@ -18,4 +18,6 @@ block content
           tr
             td
               a(href=`/schedules/${schedule.scheduleId}`) #{schedule.scheduleName}
-            td #{schedule.updatedAt}
+            td #{schedule.formattedUpdatedAt}
+
+
