--- a/views/index.pug
+++ b/views/index.pug
@@ -17,5 +17,5 @@ block content
         each schedule in schedules
           tr
             td
-              a(href=`/schedules/${schedule.scheduleId}`) #{schedule.scheduleName}
-            td #{schedule.updatedAt}
+              a(href=`/schedules/${schedule.scheduleId}`) #{schedule.scheduleName} 
+            td #{schedule.formattedUpdatedAt}
