--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title 予定調整くん
+    title Schedule Arranger
     meta(charset="utf-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
@@ -12,14 +12,14 @@ html
   body
     nav.navbar.navbar-light.bg-light
       div.navbar-header
-        a(href="/").navbar-brand.nav-link 予定調整くん
+        a(href="/").navbar-brand.nav-link Schedule Arranger
       ul.navbar-nav
         if user
           li.nav-item
-            a(href="/logout").nav-link #{user.username} をログアウト
+            a(href="/logout").nav-link Logout #{user.username} 
         else
           li.nav-item
-            a(href="/login").nav-link ログイン
+            a(href="/login").nav-link Login
     div.container
       block content
     script(src="/javascripts/bundle.js")
