--- a/views/schedule.pug
+++ b/views/schedule.pug
@@ -8,6 +8,10 @@ block content
       p(style="white-space:pre;") #{schedule.memo}
     div.card-footer
       p This events owner: #{schedule.user.username}
+  div.form-group
+    label(for="shareURL") Sharing URL:
+    - var herokuURL = process.env.HEROKU_URL ? process.env.HEROKU_URL : 'http://localhost:8000/'
+    input(type="text" value=`${herokuURL}schedules/${schedule.scheduleId}/`)#shareURL.form-control
   - var isMine = parseInt(user.id) === schedule.user.userId
   if isMine
     div
