--- a/views/index.pug
+++ b/views/index.pug
@@ -18,4 +18,5 @@ block content
           tr
             td
               a(href=`/schedules/${schedule.scheduleId}`) #{schedule.scheduleName}
-            td #{schedule.updatedAt}
+            - var updatedAt = schedule.updatedAt.toLocaleString({ timeZone: 'Asia/Tokyo' });
+            td #{schedule.formattedUpdatedAt}
