予定編集ページの編集・削除ボタンを横並びで表示させる

--- a/views/new.pug
+++ b/views/new.pug
@@ -12,3 +12,4 @@ block content
       label(for="candidates") 候補日程 (改行して複数入力してください)
       textarea(name="candidates" rows="4")#candidates.form-control
     button(type="submit").btn.btn-info 予定をつくる
+  button(type="submit").btn.btn-danger キャンセル
