--- a/views/edit.pug
+++ b/views/edit.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h3.my-3 予定の編集
-  form(method="post", action=`/schedules/${schedule.scheduleId}?edit=1`)
+  form(method="post")
     div.form-group
       label(for="scheduleName") 予定名
       input(type="text" name="scheduleName" value=schedule.scheduleName)#scheduleName.form-control
@@ -17,7 +17,6 @@ block content
       label(for="candidates").my-2 候補日程の追加 (改行して複数入力してください)
       textarea(name="candidates")#candidates.form-control
     div
-      button(type="submit").btn.btn-info 以上の内容で予定を編集する
-  h3.my-3 危険な変更
-  form(method="post", action=`/schedules/${schedule.scheduleId}?delete=1`)
-    button(type="submit").btn.btn-danger この予定を削除する
+      button(type="submit" formaction=`/schedules/${schedule.scheduleId}?delete=1`).btn.btn-danger.mr-3 この予定を削除する
+      button(type="submit" formaction=`/schedules/${schedule.scheduleId}?edit=1`).btn.btn-info 以上の内容で予定を編集する
+      
